add the add-task function

--- a/addtask.html
+++ b/addtask.html
@@ -21,9 +21,9 @@
     </nav>
     <div id="smallNav" class="smallNav">
     </div>
-    <main id="addTaskMain">
+    <main>
         <h1>Add Task</h1>
-        <div class="mainContainer">
+        <div class="mainContainer" id="addTaskMain">
             <div class="mainSection">
                 <form action="" class="sectionLeft">
 
