--- a/board.html
+++ b/board.html
@@ -34,7 +34,7 @@
                 <div class="taskActivities">
                     <form class="findTask" onsubmit="findTaskFunction()">
                         <input id="findTask" type="text" placeholder="Find Task" class="findTaskTextarea">
-                        <button class="findTaskButton" type="button"> 
+                        <button class="findTaskButton" type="button" onclick="findTaskFunction()"> 
                             <svg class="" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <mask id="mask0_146316_5742" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
                             <rect width="32" height="32" fill="#D9D9D9"/>
