Updated Assigned to input field function

--- a/addtask.html
+++ b/addtask.html
@@ -51,9 +51,10 @@
                                 class="dropDownOption searchContactField"><img onclick="closeContactsDropDown()"
                                 id="assignedDropDownArrowOpened" class="dropDownMenuArrow  rotated"
                                 src="./img/addtask/arrow_drop_downaa.svg">
-
                             <div id="contactsList" class="contactsDropDownMenu">
                             </div>
+                        </div>
+                        <div id="assignedContactsList" class="assignedContactsList">
                         </div>
                     </div>
                 </form>
@@ -102,9 +103,10 @@
 
                         <div class="inputBox subtask">
                             <span class="typo">Subtasks</span>
-                            <div class="inputSubtaskContainer"><input minlength="3" id="inputSubtask" class="inputSubtask inputField"
-                                    type="text" placeholder="Add new subtask"><img onclick="addSubtask()"
-                                    id="addSubtaskButton" class="subtaskimg" src="./img/addtask/addsubtask.svg" alt="">
+                            <div class="inputSubtaskContainer"><input minlength="3" id="inputSubtask"
+                                    class="inputSubtask inputField" type="text" placeholder="Add new subtask"><img
+                                    onclick="addSubtask()" id="addSubtaskButton" class="subtaskimg"
+                                    src="./img/addtask/addsubtask.svg" alt="">
                             </div>
                             <div>
                                 <ul id="subtaskList" class="subTaskList">
