--- a/board.html
+++ b/board.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
-<body onload="init('board')">
+<body onload="init1('board')">
     <header id="header">
     </header>
     <div id="smallMenu" class="smallMenu noDisplay">
@@ -114,6 +114,7 @@
     <script src="./javascript/addtask.js"></script>
     <script src="./javascript/board.js"></script>
     <script src="./javascript/storage.js"></script>
+
 
 </body>
 
