addTask Changed Inputfield to Textarea

--- a/addtask.html
+++ b/addtask.html
@@ -37,8 +37,7 @@
 
                     <div class="description inputBox">
                         <span class="typo">Description</span>
-                        <input class="inputDescription inputField" type="text" id="description"
-                            placeholder="Enter a Description" autocomplete="off">
+                        <textarea class="inputDescription inputField" name="" id="description" cols="30" rows="10" placeholder="Enter a Description" autocomplete="off"></textarea>
                     </div>
 
                     <div class="assigned inputBox dropdown">
