added Login, Logout & getGreetingName functions

--- a/summary.html
+++ b/summary.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
-<body onload="init()">
+<body onload="initSummary()">
     <header id="header">
     </header>
     <div id="smallMenu" class="smallMenu noDisplay">
@@ -77,17 +77,19 @@
                 </div>
             </div>
             <div class="summaryPageGreeting">
-                <div id="greetingMessageText" class="greetingMessage">Good morning,</div>
-                <div id="greetingName" class="greetingName">Sofia Müller</div>
+                <div id="greetingMessageText" class="greetingMessage"></div>
+                <div id="greetingName" class="greetingName"></div>
             </div>
         </div>
     </main>
-    <script src="./javascript/signup.js"></script>
     <script src="./javascript/board.js"></script>
     <script src="./javascript/JSON/tasks.js"></script>
     <script src="./javascript/summary.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
+    <script src="./javascript/signup.js"></script>
+    <script src="./javascript/login.js"></script>
+    <script src="./javascript/storage.js"></script>
 
 </body>
 
