--- a/login.html
+++ b/login.html
@@ -58,9 +58,12 @@
         <span class="legalNotice" onclick="openLegalNoticePage()">Legal notice</span>
     </div>
 
+    <script src="./javascript/JSON/tasks.js"></script>
     <script src="./javascript/storage.js"></script>
     <script src="./javascript/signup.js"></script>
     <script src="./javascript/login.js"></script>
+    <script src="./javascript/summary.js"></script>
+    
 </body>
 
 </html>
