--- a/login.html
+++ b/login.html
@@ -32,8 +32,10 @@
                     <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off"
                         oninput="resetOutline('email')">
                     <div id="messageboxEmail" class="messagebox"></div>
-                    <input class="input inputPassword" type="password" placeholder="Password" id="password"
-                        autocomplete="off" oninput="resetOutline('password')">
+                    <div class="inputContainer"><input autocomplete="off" oninput="resetOutline('password')"
+                            onfocus="changeImage()" id="password" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
+                            class="input" type="password" placeholder="Password"><img id="passwordimage"
+                            onclick="changeEye()" class="inputSmallIcon" src="./img/login/lock.svg"></div>
                     <div id="messageboxPassword" class="messagebox"></div>
                 </div>
                 <div class="remember">
@@ -63,7 +65,6 @@
     <script src="./javascript/signup.js"></script>
     <script src="./javascript/login.js"></script>
     <script src="./javascript/summary.js"></script>
-    
-</body>
 
+</body>
 </html>
