--- a/signup.html
+++ b/signup.html
@@ -25,15 +25,22 @@
             </div>
             <form class="form" onsubmit="addUser();return false;">
                 <div class="inputFields">
-                    <input class="input inputName" type="text" placeholder="Name" id="name" autocomplete="off" oninput="resetOutline('name')">
+                    <input class="input inputName" type="text" placeholder="Name" id="name" autocomplete="off"
+                        oninput="resetOutline('name')">
                     <div class="messagebox" id="messageboxName"></div>
-                    <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off" oninput="resetOutline('email')">
+                    <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off"
+                        oninput="resetOutline('email')">
                     <div class="messagebox" id="messageboxEmail"></div>
-                    <input class="input inputPassword" type="password" placeholder="Password" id="password"
-                        autocomplete="off" oninput="resetOutline('password')">
+                    <div class="inputContainer"><input autocomplete="off" oninput="resetOutline('password')"
+                            onfocus="changeImage()" id="password" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
+                            class="input" type="password" placeholder="Password"><img id="passwordimage"
+                            onclick="changeEye()" class="inputSmallIcon" src="./img/login/lock.svg"></div>
                     <div class="messagebox" id="messageboxPassword"></div>
-                    <input class="input inputPassword" type="password" placeholder="Confirm Password"
-                        id="confirmpassword" autocomplete="off" oninput="resetOutline('confirmpassword')">
+                    <div class="inputContainer"><input autocomplete="off" oninput="resetOutline('confirmpassword')"
+                            onfocus="changeImageAtConfirmPassword()" id="confirmpassword" pattern="^[A-Za-z][A-Za-z ]*$"
+                            minlength="3" class="input" type="password" placeholder="Confirm Password"><img
+                            id="passwordimageConfirmed" onclick="changeEyeAtConfirmPassword()" class="inputSmallIcon"
+                            src="./img/login/lock.svg"></div>
                     <div class="messagebox" id="messageboxConfirmpassword"></div>
                 </div>
                 <div>
@@ -57,17 +64,14 @@
             <span class="legalNotice" onclick="openLegalNoticePage()">Legal notice</span>
         </div>
     </div>
-
     <div id="successBackgroud" class="successBackgroundHide">
         <div class="successButtonDiv">
             <button id="successButton" class="successButtonHide">You Signed Up successfully</button>
         </div>
     </div>
-
     <script src="./javascript/storage.js"></script>
     <script src="./javascript/signup.js"></script>
 
 
 </body>
-
 </html>
