--- a/board.html
+++ b/board.html
@@ -24,7 +24,7 @@
         <div class="boardHeading">
             <div class="boardPageHeading">
                 <div class="mobileBoardPageHeading">
-                    <h1>Board</h1>
+                    <div class="h1Board">Board</div>
                 <svg onclick="showCardDetail('addTask')" class="mobileTaskActivities" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="40" height="40" rx="10" fill="#2A3647"/>
                     <path d="M20 10V30" stroke="white" stroke-width="2" stroke-linecap="round"/>
@@ -107,13 +107,14 @@
         <div id="cardDetail"></div>
     </div>
     
+    <script src="./javascript/storage.js"></script>
     <script src="./javascript/signup.js"></script>
     <script src="./javascript/JSON/tasks.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/addtask.js"></script>
     <script src="./javascript/board.js"></script>
-    <script src="./javascript/storage.js"></script>
+
 
 
 </body>
