--- a/signup.html
+++ b/signup.html
@@ -25,18 +25,20 @@
             </div>
             <form class="form" onsubmit="addUser();return false;">
                 <div class="inputFields">
-                    <input class="input inputName" type="text" placeholder="Name" id="name" autocomplete="off"
-                        oninput="resetOutline('name')">
+                        <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('name')"
+                            id="name" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
+                            class="input" type="text" placeholder="Name"><img class="inputSmallIcon" src="./img/register/person.svg"></div>
                     <div class="messagebox" id="messageboxName"></div>
-                    <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off"
-                        oninput="resetOutline('email')">
+                        <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('email')"
+                            id="email" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
+                            class="input" type="email" placeholder="Email"><img class="inputSmallIcon" src="./img/login/mail.svg"></div>
                     <div class="messagebox" id="messageboxEmail"></div>
-                    <div class="inputContainer"><input autocomplete="off" oninput="resetOutline('password')"
+                    <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('password')"
                             onfocus="changeImage()" id="password" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
                             class="input" type="password" placeholder="Password"><img id="passwordimage"
                             onclick="changeEye()" class="inputSmallIcon" src="./img/login/lock.svg"></div>
                     <div class="messagebox" id="messageboxPassword"></div>
-                    <div class="inputContainer"><input autocomplete="off" oninput="resetOutline('confirmpassword')"
+                    <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('confirmpassword')"
                             onfocus="changeImageAtConfirmPassword()" id="confirmpassword" pattern="^[A-Za-z][A-Za-z ]*$"
                             minlength="3" class="input" type="password" placeholder="Confirm Password"><img
                             id="passwordimageConfirmed" onclick="changeEyeAtConfirmPassword()" class="inputSmallIcon"
