updated header guest login

--- a/addtask.html
+++ b/addtask.html
@@ -130,6 +130,7 @@
         </div>
 
     </main>
+    <script src="./javascript/JSON/tasks.js"></script>
     <script src="./javascript/storage.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
