--- a/board.html
+++ b/board.html
@@ -109,7 +109,7 @@
     
     <script src="./javascript/storage.js"></script>
     <script src="./javascript/signup.js"></script>
-    <script src="./javascript/JSON/tasks.js"></script>
+    <!-- <script src="./javascript/JSON/tasks.js"></script> -->
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/addtask.js"></script>
