updated function addtask

--- a/addtask.html
+++ b/addtask.html
@@ -74,11 +74,11 @@
                         <div class="prioBox prio">
                             <span class="typo">Prio</span>
                             <div class="prioButtonBox">
-                                <button class="prioButton typo prioButtonUrgent">Urgent <img class="iconPrio"
+                                <button onclick="setPrio('urgent')" class="prioButton typo prioButtonUrgent">Urgent <img class="iconPrio"
                                         src="./img/addtask/Prio alta.svg" alt=""></button>
-                                <button class="prioButton typo prioButtonMedium">Medium <img class="iconMedium"
+                                <button onclick="setPrio('medium')"  class="prioButton typo prioButtonMedium">Medium <img class="iconMedium"
                                         src="./img/addtask/Prio media_orange.svg" alt=""></button>
-                                <button class="prioButton typo prioButtonLow">Low <img class="iconPrio"
+                                <button onclick="setPrio('low')" class="prioButton typo prioButtonLow">Low <img class="iconPrio"
                                         src="./img/addtask/Prio baja.svg" alt=""></button>
                             </div>
                         </div>
@@ -130,7 +130,7 @@
         </div>
 
     </main>
-    <script src="./javascript/JSON/tasks.js"></script>
+    <script src="./javascript/board.js"></script>
     <script src="./javascript/storage.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
