--- a/summary.html
+++ b/summary.html
@@ -20,7 +20,10 @@
 
     <div id="smallNav" class="smallNav">
     </div>
-
+    <div id="greetingPage" class="greetingContainer">
+        <div class="greetingMessageSmallScreen">Good morning,</div>
+        <div class="greetingNameSmallScreen">Sofia Muller</div>
+    </div>
     <main>
         <div class="summaryPageHeading">
             <h1>Join 360</h1>
