--- a/login.html
+++ b/login.html
@@ -30,11 +30,11 @@
             <form id="loginForm" onsubmit="login(); return false;">
                 <div class="inputFields">
                         <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('email')"
-                            id="email" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
+                            id="email" minlength="3"
                             class="input" type="email" placeholder="Email"><img class="inputSmallIcon" src="./img/login/mail.svg"></div>
                     <div id="messageboxEmail" class="messagebox"></div>
                     <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('password')"
-                            onfocus="changeImage()" id="password" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
+                            onfocus="changeImage()" id="password"  minlength="3"
                             class="input" type="password" placeholder="Password"><img id="passwordimage"
                             onclick="changeEye()" class="inputSmallIcon" src="./img/login/lock.svg"></div>
                     <div id="messageboxPassword" class="messagebox"></div>
