updated addTask function

--- a/addtask.html
+++ b/addtask.html
@@ -123,7 +123,7 @@
                 <div class="buttonsRight">
                     <button onclick="clearFields()" class="buttonClear">Clear<img class="iconCross" src="./img/addtask/iconoir_cancel.svg"
                             alt="" ></button>
-                    <button onclick="addtask()" class="buttonCreate">Create Task <img class="icon" src="./img/addtask/check.svg" alt=""
+                    <button onclick="addtask('toDo')" class="buttonCreate">Create Task <img class="icon" src="./img/addtask/check.svg" alt=""
                             ></button>
                 </div>
             </div>
