--- a/summary.html
+++ b/summary.html
@@ -21,10 +21,10 @@
     <div id="smallNav" class="smallNav">
     </div>
     <div id="greetingPage" class="greetingContainer">
-        <div class="greetingMessageSmallScreen">Good morning,</div>
-        <div class="greetingNameSmallScreen">Sofia Muller</div>
+        <div id="greetingMessageSmallScreen" class="greetingMessageSmallScreen"></div>
+        <div id="greetingNameSmallScreen" class="greetingNameSmallScreen"></div>
     </div>
-    <main>
+    <main class="summaryMain" id="summaryMain">
         <div class="summaryPageHeading">
             <h1>Join 360</h1>
             <div class="headingBorder"></div>
