updated prio buttons add task

--- a/addtask.html
+++ b/addtask.html
@@ -74,11 +74,11 @@
                         <div class="prioBox prio">
                             <span class="typo">Prio</span>
                             <div class="prioButtonBox">
-                                <button onclick="setPrio('urgent')" class="prioButton typo prioButtonUrgent">Urgent <img class="iconPrio"
+                                <button id="urgentPrio" onclick="setPrio('urgent')" class="prioButton typo prioButtonUrgent">Urgent <img class="iconPrio"
                                         src="./img/addtask/Prio alta.svg" alt=""></button>
-                                <button onclick="setPrio('medium')"  class="prioButton typo prioButtonMedium">Medium <img class="iconMedium"
+                                <button id="mediumPrio" onclick="setPrio('medium')"  class="prioButton typo prioButtonMedium mediumPrioButtonClicked">Medium <img class="iconMedium"
                                         src="./img/addtask/Prio media_orange.svg" alt=""></button>
-                                <button onclick="setPrio('low')" class="prioButton typo prioButtonLow">Low <img class="iconPrio"
+                                <button id="lowPrio" onclick="setPrio('low')" class="prioButton typo prioButtonLow">Low <img class="iconPrio"
                                         src="./img/addtask/Prio baja.svg" alt=""></button>
                             </div>
                         </div>
