new legal, privacy and help/ new button back

--- a/board.html
+++ b/board.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
-<body onload="init1('board')">
+<body onload="initBoard('board')">
     <header id="header">
     </header>
     <div id="smallMenu" class="smallMenu noDisplay">
