--- a/help.html
+++ b/help.html
@@ -69,6 +69,7 @@
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/board.js"></script>
+    <script src="./javascript/storage.js"></script>
     
 </body>
 
