--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -84,6 +84,7 @@
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/board.js"></script>
+    <script src="./javascript/storage.js"></script>
     
 </body>
 
