Login und Signup Fehlerbehebung

--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
                             class="input" type="text" placeholder="Name"><img class="inputSmallIcon" src="./img/register/person.svg"></div>
                     <div class="messagebox" id="messageboxName"></div>
                         <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('email')"
-                            id="email" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
+                            id="email" 
                             class="input" type="email" placeholder="Email"><img class="inputSmallIcon" src="./img/login/mail.svg"></div>
                     <div class="messagebox" id="messageboxEmail"></div>
                     <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('password')"
