--- a/startpage.html
+++ b/startpage.html
@@ -31,7 +31,7 @@
             <form id="loginForm" onsubmit="login(); return false;">
                 <div class="inputFields">
                         <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('email')"
-                            id="email" pattern="^[A-Za-z][A-Za-z ]*$" minlength="3"
+                            id="email" minlength="3"
                             class="input" type="email" placeholder="Email"><img class="inputSmallIcon" src="./img/login/mail.svg"></div>
                     <div id="messageboxEmail" class="messagebox"></div>
                     <div class="inputContainer"><input autocomplete="off" onfocus="resetOutline('password')"
