--- a/contacts.html
+++ b/contacts.html
@@ -100,6 +100,7 @@
     <script src="./javascript/contacts.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
+    <script src="./javascript/board.js"></script>
 </body>
 
 </html>
