--- a/addtask.html
+++ b/addtask.html
@@ -121,7 +121,7 @@
                     </form>
                 </div>
             </div>
-            <div class="lowerSection">
+            <div id="lowerSection">
                 <div>
                     <span class="typoSmall typoRed">*</span><span class="typoSmall">This field is required</span>
                 </div>
